Revision history for Pod-Readme

{{$NEXT}}
  [Documentation]
  - Fixed minor typos.

v1.2.3    2018-10-31 22:56:42+00:00 Europe/London
  [Bug Fixes]
  - Increased minimum version of Type::Tiny to 1.000000.

v1.2.2    2018-10-31 22:41:45+00:00 Europe/London
  [Documentation]
  - Updated POD with regard to format types (Mohammad S Anwar).

  - Fixed typos in Changes.

  [Bug Fixes]
  - Added explicit requirements for Pod::Simple as well as recommended
    modules.

  [Toolchain]
  - Remove explicit core dependencies from prereqs list.

  - Updated list of contributors in distribution metadata. (Apologies
    if anyone was omitted.)

v1.2.1    2018-10-30 18:23:48+00:00 Europe/London
  [Documentation]
  - Added note about Github Flavoured Markdown (GFM) support
    to Changes for v1.2.0.

  [Other]
  - Restore license to "Perl_5" that was inadvertently changed
    in the conversion to use Dist::Zilla, GH#25.

v1.2.0    2018-10-29 19:24:01+00:00 Europe/London
  [Bug Fixes]
  - Specify minimum version of List::Util, GH#22.

  [Enhancements]
  - Added "md" as an alias for "markdown" in pod2readme.

  - Added "github" or "gfm" for Github Flavored Markdown in
    pod2readme, GH#15.

  [Incompatabilities]
  - Removed DistZilla type from Pod::Readme::Types, as it was not
    necessary.

  [Toolchain]
  - Remove use of Module::Install, fixes GH#21.

  - Use Dist::Zilla to build the distribution.

v1.1.2 2014-12-09 18:55 GMT
  [Bug Fixes]
  - Regex in changes plugin fixed to work with Perl 5.21 deprecated
    syntax [khwilliamson].

v1.1.1 2014-12-04 13:11 GMT
  [Bug Fixes]
  - The changes plugin will work with Dist::Zilla {{$NEXT}} tokens.

v1.1.0 2014-12-03 19:08 GMT
  [Documentation]
  - Fixed typos in POD for requires plugin.

  [Enhancements]
  - Pod::Readme::Filter has a zilla attribute for Dist::Zilla objects.

  - The requires plugin will use metadata from the Dist::Zilla object
    if it is set, rather than looking for a META.yml file (which will