@@ -25,7 +25,6 @@ requires:
   CPAN::Changes: 0
   CPAN::Meta: 0
   ExtUtils::MakeMaker: 6.56
-  File::Slurp: 0
   Hash::Util: 0
   IO: 0
   Module::CoreList: 0
