@@ -4,6 +4,9 @@ Revision history for Pod-Readme
   [Documentation]
   - Fixed minor typos.
 
+  [Enhancement]
+  - Removed use of File::Slurp.
+
 v1.2.3    2018-10-31 22:56:42+00:00 Europe/London
   [Bug Fixes]
   - Increased minimum version of Type::Tiny to 1.000000.
